bpo-39562: Run asynchronous comprehensions under asyncio repl